# px4-ros2-uavctl

./: .gitignore  CMakeLists.txt  OFFBOARD_CONTROL_FIX.md  ORGANIZATION_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.txt  README.md  README_FINAL.md  SYSTEM_SETUP_GUIDE.md  deploy_config.sh
deploy/: clean_remote_build.sh  deploy_config.sh  deploy_offboard.bat  deploy_offboard.sh  diagnose_offboard.sh  quick_deploy.sh
docs/: 01-QuickStart.md  02-QuickReference.md  03-DeploymentGuide.md  04-FAQ.md  05-Examples.md  06-FileStructure.md  07-DeploymentSummary.md  08-OffboardControl-Troubleshooting.md  09-QuickStart-Offboard.md  Examples.md  FAQ.md  README.md  UserGuide.md
include/px4_hexctl/: offboard_control.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_hexctl/include/px4_hexctl/: offboard_control.hpp  vehicle.hpp
install/px4_hexctl/lib/px4_hexctl/: main.py  main2.py  main_srv.py  offboard_control_lib.py  offboard_control_main  test_rect.py
install/px4_hexctl/share/px4_hexctl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/offboard_control_cpp/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/offboard_control_cpp/include/offboard_control_cpp/: offboard_control.hpp  vehicle.hpp
src/offboard_control_cpp/src/: main.cpp
src/offboard_control_cpp/src/offboard_control_lib/: offboard_control.cpp  vehicle.cpp
src/px4_hexctl/src/: main.cpp  offboard_circle.cpp  offboard_takeoff.cpp  qr_tracker.cpp  qr_tracker_alt.cpp
src/py_script/: main_srv.py  offboard_control_lib.py  test_rect.py
src/startup/: simulation-gazebo
startup/: run_demo_docker.sh  start_gz_offboard.sh  start_offboard_remote.sh  start_qr_tracking_demo.sh  startup.sh  startup_realrobot.sh
(+10 files in other folders)
